[package]
name = "tictactoe-client"
version = "0.0.1"
authors = ["ondradoksy <ondradoksy@ondradoksy.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
webgl-matrix = "0.1.0"
serde-wasm-bindgen = "0.6.3"
serde = "1.0.194"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'console',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'MouseEvent',
    'HtmlImageElement',
    'WebGlTexture',
    'Performance',
    'WebGlVertexArrayObject',
    'Crypto',
    'WebSocket',
    'Location',
    'Blob',
    'BinaryType',
    'FileReader',
    'ProgressEvent',
    'ErrorEvent'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
